# SeniorProject

./: .gitignore  Bomb.cpp  Bomb.h  CREDITS  GNUmakefile  Level.cpp  Level.h  Makefile  Makefile-mac  Makefile.am  README.md  TODO  configure.ac  gasdg.rtf  mkfile  test  test_test.txt
makefiles/: Makefile-linux  Makefile-macFrameworks  Makefile-macports
media/player/SF_Ship/Ai_files/: ship_sf_all_items copy.ai  ship_sf_all_items.ai  something.ai
media/sounds/: Crosses.m4a
src/: .MovingObject.cpp.b  .main_bck.cpp  Alien.cpp  Alien.h  Asteroid.cpp  Asteroid.h  Collision.cpp  Collision.h  Constants.h  LTexture.cpp  LTexture.h  LTimer.h  Laser.cpp  Laser.h  Level.h  MovingObject.cpp  MovingObject.h  Object.cpp  Object.h  Planet.cpp  Planet.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  README.md  Ship.cpp  Ship.h  Util.cpp  Util.h  main.cpp
src/client/: Alien.cpp  Alien.h  Asteroid.h  Collision.cpp  Constants.h  Explosion.cpp  Explosion.h  LTexture.cpp  LTexture.h  LTimer.cpp  LTimer.h  Laser.cpp  Laser.h  Makefile.am  MovingObject.cpp  MovingObject.h  Object.h  Planet.h  Player.cpp  Player.h  Powerup.cpp  Ship.cpp  Ship.h  Util.cpp  Vec2D.cpp  Vec2D.h  main.cpp
src/server/: Alien.cpp  Alien.h  Asteroid.cpp  Collision.h  Constants.h  Explosion.h  LTexture.cpp  Laser.cpp  Laser.h  Level.cpp  Level.h  Makefile.am  MovingObject.cpp  MovingObject.h  Object.cpp  Planet.cpp  Planet.h  Player.cpp  Powerup.cpp  Powerup.h  Ship.cpp  Util.h  main.cpp  server
src/shared/: Alien.cpp  Alien.h  Asteroid.cpp  Asteroid.h  Constants.h  Explosion.cpp  Explosion.h  LTexture.cpp  LTexture.h  LTimer.cpp  LTimer.h  Laser.cpp  Laser.h  MovingObject.cpp  MovingObject.h  Object.cpp  Object.h  Planet.cpp  Planet.h  Player.cpp  Player.h  Powerup.cpp  Powerup.h  Ship.cpp  Ship.h  Util.cpp  Util.h
src/socket/: client  server  simple_client_main.cpp  simple_server_main.cpp
