AC_INIT([ourgame], [1.0], [dhakimian@westmont.edu])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CXX
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
                 Makefile
                 src/Makefile
                 src/client/Makefile
                 src/server/Makefile
                 ])
AC_OUTPUT
dnl Check for SDL2
##SDL_VERSION=2.0.1
##AM_PATH_SDL2($SDL_VERSION,
            ##:,
            ##AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
            ##)
